fix: add margin bottom on smaller devices

--- a/intro-component-with-signup-form-master/style.css
+++ b/intro-component-with-signup-form-master/style.css
@@ -220,6 +220,10 @@ button:hover {
     width: 90vw;
   }
 
+  .form-content {
+    margin-bottom: 2rem;
+  }
+
   .subscription button {
     padding: 15px 80px;
     font-size: 1rem;
